2000-04-06  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-inhibit-key-bindings): Added keybinding for
 	tnt-leave-chat.
	(tnt-show-help): Added help for tnt-leave-chat
	(tnt-chat-buffer-name): Made comment into docstring
	(tnt-chat-buffer): Made comment into docstring

	* toc.el (toc-chat-invite): Made the &rest parameter a normal
 	parameter so we wouldn't need to use apply when we have built a
 	list of buddies to invite.

	* tnt.el (tnt-join-chat): Better docstring
	(tnt-handle-chat-join): Tiny simplification
	(tnt-append-message): Significant interface change.  User now
	comes after message and is optional so if it is not needed it can
	be left out, not sent as nil.  More significantly, a new optional
	argument MODIFIED is used for the various parenthetical comments
	made about some messages, such as Auto-response, whispers,
	invites, etc.  This is so that the coloring mechanism gets to look 
	at the unadorned username.  Now when I whisper to someone in a
	chat room it will still be printed in my color.

2000-04-05  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-chat-leave): Allows quitting a chat without killing
 	the buffer.
	(tnt-join-chat): tnt-join-chat nows joins the chat associated with
 	the current buffer if there is one.
	(tnt-chat-buffer-killed): Uses tnt-chat-leave
	(tnt-handle-eviled): handle the eviled message (untested, no client)

	* PROTOCOL: Neatened up so everything it fits in 80 columns

	* toc.el (toc-handle-receive): Added code for all the messages
 	that we don't handle yet.  For the moment I've hooked all except
 	'eviled' up to tnt-debug which logs the message in a buffer called
 	"*tnt-debug*".  For release they should be hooked up to some
 	ignore function (unless we actually use them)  Also moved the
	clauses that decipher the type of messages so that they are in the 
	same order as the messages are described in PROTOCOL.
	

2000-04-05 John Jannotti <jj@lcs.mit.edu>
